@@ -145,16 +145,16 @@
 # endif /* !__MT__ */
 #endif /* ACE_MT_SAFE && ACE_MT_SAFE != 0 */
 
-#if (__BORLANDC__ <= 0x660)
+#if (__BORLANDC__ <= 0x680)
 # define ACE_LACKS_ISWCTYPE
 # define ACE_LACKS_ISCTYPE
 #endif
 
-#if (__BORLANDC__ >= 0x650) && (__BORLANDC__ <= 0x660)
+#if (__BORLANDC__ >= 0x650) && (__BORLANDC__ <= 0x680)
 # define ACE_LACKS_STRTOK_R
 #endif
 
-#if (__BORLANDC__ <= 0x660)
+#if (__BORLANDC__ <= 0x680)
 # define ACE_LACKS_LOCALTIME_R
 #endif
 
