@@ -19,7 +19,7 @@
 # pragma pack (push, 8)
 #elif defined (__BORLANDC__)
 # pragma option push -a8 -b -Ve- -Vx- -w-rvl -w-rch -w-ccc -w-obs -w-aus -w-pia -w-inl -w-sig
-# if (__BORLANDC__ == 0x660)
+# if (__BORLANDC__ >= 0x660) && (__BORLANDC__ <= 0x680)
 // False warning: Function defined with different linkage, reported to
 // Embarcadero as QC 117740
 #  pragma option push -w-8127
